<resources>
    <string name="app_name">AppTest</string>
    <string name="btn_main_calculator">计算器</string>
    <string name="btn_main_listview">ListView</string>
    <string name="btn_main_picker">Picker</string>
    <string name="btn_main_gridview">GridView</string>
    <string name="btn_main_spinner">Spinner</string>
    <string name="btn_main_progressbar">ProgressBar</string>
    <string name="btn_main_webview">WebView</string>
    <string name="btn_main_fragment">Fragment</string>

    <string name="c">C</string>
    <string name="del">DEL</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="point">.</string>

    <string name="refresh">刷新</string>
    <string name="add">增加</string>
    <string name="reduce">减少</string>
    <string name="reset">重置</string>
    <string name="showDialog">显示进度条对话框</string>
    <string name="radiobutton1">静态加载</string>
    <string name="radiobutton2">动态加载</string>
    <string name="radiobutton3">生命周期</string>
    <string name="radiobutton4">传值通信</string>
    <string name="btn_main_viewpager">ViewPager</string>
    <string name="btn_main_viewflipper">ViewFlipper</string>
    <string name="btn_main_scrollview">ScrollView</string>
    <string name="content">
        \tANDROID
        \n
        \tAndroid是一种基于Linux的自由及开放源代码的操作系统，主要使用于移动设备，如智能手机和平板电脑，由Google公司和开放手机联盟领导及开发。尚未有统一中文名称，中国大陆地区较多人使用“安卓”或“安致”。\n
        \n
        \tAndroid操作系统最初由Andy Rubin开发，主要支持手机。2005年8月由Google收购注资。\n
        \n
        \t2007年11月，Google与84家硬件制造商、软件开发商及电信营运商组建开放手机联盟共同研发改良Android系统。随后Google以Apache开源许可证的授权方式，发布了Android的源代码。\n
        \n
        \t第一部Android智能手机发布于2008年10月。Android逐渐扩展到平板电脑及其他领域上，如电视、数码相机、游戏机等。2011年第一季度，Android在全球的市场份额首次超过塞班系统，跃居全球第一。 2013年的第四季度，Android平台手机的全球市场份额已经达到78.1%。[1]  2013年09月24日谷歌开发的操作系统Android在迎来了5岁生日，全世界采用这款系统的设备数量已经达到10亿台。\n
        \n
        \t2003年10月，Andy Rubin等人创建Android公司，并组建Android团队。\n
        \n
        \t2005年8月17日，Google低调收购了成立仅22个月的高科技企业Android及其团队。安迪鲁宾成为Google公司工程部副总裁，继续负责Android项目。\n
        \n
        \t2007年11月5日，谷歌公司正式向外界展示了这款名为Android的操作系统，并且在这天谷歌宣布建立一个全球性的联盟组织，该组织由34家手机制造商、软件开发商、电信运营商以及芯片制造商共同组成，并与84家硬件制造商、软件开发商及电信营运商组成开放手持设备联盟（Open Handset Alliance）来共同研发改良Android系统，这一联盟将支持谷歌发布的手机操作系统以及应用软件，Google以Apache免费开源许可证的授权方式，发布了Android的源代码。
    </string>
    <string name="btn_main_gallery">Gallery</string>
    <string name="btn_main_seekbar">SeekBar</string>
    <string name="btn_main_listview2">ListView2</string>
    <string name="btn_main_asynctask">AsyncTask</string>
    <string name="btn_main_news">News异步加载</string>
    <string name="btn_main_sharedpreferences">SharedPreferences存储用户名-登陆界面</string>
    <string name="btn_main_sqlite">SQLite存储</string>
    <string name="btn_main_file">File文件存储</string>
    <string name="btn_main_contentProvider">ContentProvider</string>
    <string name="cp_btn_insert">插入联系人</string>
    <string name="btn_main_broadcastreceiver">BroadcastReceiver广播接收器</string>
    <string name="broadcastReceiver_send1">发送一条普通广播</string>
    <string name="broadcastReceiver_send2">发送一条有序广播</string>
    <string name="broadcastReceiver_send3">发送一条异步广播</string>
    <string name="btn_main_service">Service</string>
    <string name="service_start">StartService</string>
    <string name="service_stop">StopService</string>
    <string name="service_bind">BindService</string>
    <string name="service_play">播放</string>
    <string name="service_pause">暂停</string>
    <string name="service_next">下一首</string>
    <string name="service_previous">上一首</string>
    <string name="service_unbind">UnBindService</string>
    <string name="btn_main_systemService">SystemService</string>
    <string name="ss_btn_network">判断网络是否连接</string>
    <string name="ss_btn_wifi">开关WIFI</string>
    <string name="ss_btn_voice">获取系统音量</string>
    <string name="ss_btn_package">获取当前进程包名</string>
    <string name="btn_main_gesturedetector">手势识别</string>
    <string name="btn_main_handler">Handler机制</string>
    <string name="handler_btn">停止handler滚动</string>
    <string name="btn_main_handlerlooper">HandlerLooper机制</string>
</resources>
