<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_title" />

    <Button
        android:id="@+id/broadcastReceiver_send1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="doClick"
        android:text="@string/broadcastReceiver_send1" />

    <Button
        android:id="@+id/broadcastReceiver_send2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="doClick"
        android:text="@string/broadcastReceiver_send2" />

    <Button
        android:id="@+id/broadcastReceiver_send3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="doClick"
        android:text="@string/broadcastReceiver_send3" />

</LinearLayout>