<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_title" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/et_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/white_bg"
            android:gravity="end|bottom"
            android:inputType="number"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/white_selector"
                android:gravity="end|bottom"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/c"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_del"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/white_selector"
                android:gravity="end|bottom"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/del"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_divide"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/white_selector"
                android:gravity="end|bottom"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/divide"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_multiply"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/white_selector"
                android:gravity="end|bottom"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/multiply"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_7"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/white_selector"
                android:gravity="end|bottom"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/seven"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_8"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/white_selector"
                android:gravity="end|bottom"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/eight"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_9"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/white_selector"
                android:gravity="end|bottom"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/nine"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/white_selector"
                android:gravity="end|bottom"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/minus"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_4"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/white_selector"
                android:gravity="end|bottom"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/four"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/white_selector"
                android:gravity="end|bottom"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/five"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/white_selector"
                android:gravity="end|bottom"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/six"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/white_selector"
                android:gravity="end|bottom"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/plus"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_1"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/white_selector"
                        android:gravity="end|bottom"
                        android:paddingBottom="10dp"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/one"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/btn_2"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/white_selector"
                        android:gravity="end|bottom"
                        android:paddingBottom="10dp"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/two"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/btn_3"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/white_selector"
                        android:gravity="end|bottom"
                        android:paddingBottom="10dp"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/three"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_0"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="2"
                        android:background="@drawable/white_selector"
                        android:gravity="end|bottom"
                        android:paddingBottom="10dp"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/zero"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/btn_point"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/white_selector"
                        android:gravity="end|bottom"
                        android:paddingBottom="10dp"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/point"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_equal"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/orange_selector"
                android:gravity="end|bottom"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/equal"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>